[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Core Move execution logic"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
hashbrown = "0.9"
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
once_cell = { version = "1.4.1", default-features = false }
hex = { version = "0.4.2", default-features = false }
anyhow = { version = "1.0.34", default-features = false }

bytecode-verifier = { path = "../../bytecode-verifier", default-features = false }
libra-crypto = { path = "../../../crypto/crypto", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
move-vm-natives = { path = "../natives", default-features = false }
move-vm-types = { path = "../types", default-features = false }
vm = { path = "../../vm", default-features = false }

[features]
default = ["std"]
debug_module = ["move-vm-natives/debug_module"]

std = [
	"once_cell/std",
	"anyhow/std",
	"sp-std/std",
	"vm/std",
	"move-core-types/std",
	"move-vm-types/std",
	"move-vm-natives/std",
	"bytecode-verifier/std",
	"libra-crypto/std",
]
