[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core Move execution logic"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hashbrown = "0.9"
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
cell = { path = "../../../common/cell", version = "0.1.0", default-features = false }
hex = { version = "0.4.2", default-features = false }
anyhow = { version = "1.0.34", default-features = false }
log = {version = "0.4", default-features = false }

bytecode-verifier = { path = "../../bytecode-verifier", default-features = false }
diem-crypto = { path = "../../../crypto/crypto", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
move-vm-natives = { path = "../natives", default-features = false }
move-vm-types = { path = "../types", default-features = false }
vm = { path = "../../vm", default-features = false }

[features]
default = ["std"]
debug_module = ["move-vm-natives/debug_module"]

std = [
	"cell/std",
	"anyhow/std",
	"vm/std",
	"move-core-types/std",
	"move-vm-types/std",
	"move-vm-natives/std",
	"bytecode-verifier/std",
	"diem-crypto/std",
    "log/std",
]
