[package]
name = "move-vm-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Types for Move VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hashbrown = "0.9"
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
proptest = { version = "0.10.1", optional = true }
sha2 = { version = "0.9.2", default-features = false }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }

bcs = { path = "../../../bcs", default-features = false }
diem-crypto = { path = "../../../crypto/crypto", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
vm = { path = "../../vm", default-features = false }

[dev-dependencies]
proptest = "0.10.1"

[features]
fuzzing = ["proptest", "vm/fuzzing"]
default = ["std"]
std = [
	"sha2/std",
	"vm/std",
	"move-core-types/std",
	"diem-crypto/std",
]
