[package]
name = "move-vm-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Types for Move VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
cell = { path = "../../../common/cell", default-features = false }
proptest = { version = "1.0.0", optional = true }
sha2 = { version = "0.9.2", default-features = false }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
smallvec = "1.7.0"
hashbrown = "0.9"
bcs = { path = "../../../bcs", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
move-binary-format = { path = "../../move-binary-format", default-features = false }

[dev-dependencies]
proptest = "1.0.0"

[features]
fuzzing = ["proptest", "move-binary-format/fuzzing"]
default = ["std"]
std = [
	"sha2/std",
	"move-binary-format/std",
	"move-core-types/std",
]
